# rust_doodle

actix-web-multipart/: Cargo.toml  README.txt
actix-web-multipart/src/: main.rs
android_multithread/: Cargo.toml
android_multithread/src/: main.rs
audio/src/: main.rs
audios/audio/: Cargo.toml
bindings/: Cargo.toml  build.rs  wrapper.h
box-test/: Cargo.toml
boxing/: Cargo.toml
callback/: callee.rs  caller.c
configtest/: Cargo.toml  README.txt
derivetest/: Cargo.toml
diesel/diesel_upsert/: .env  Cargo.toml
diesel/diesel_upsert/migrations/2019-03-13-025323_user_upsert_test/: up.sql
diesel/diesel_upsert/src/: lib.rs  models.rs  schema.rs
dotenvtest/: Cargo.toml
drop_trait/: Notes.txt  drop_cleanup.rs  drop_is_recursive.rs  variables_dropped_in_reverse.rs
error_handling/: README.md
glue/: README.txt
hello_android/: Cargo.toml  README.md
hello_no_glue/: Cargo.toml  README.md
lifetime/: booktest.rs  mytest.rs
macrotest/: Cargo.toml
multifile/: Cargo.toml
mutable_bytes/: Cargo.toml  README.txt
option_and_unwrap/: unwrap.rs
phantom_parameters/: phantom_params  phantom_params.rs
qrtest/: .Cargo.toml.swp  Cargo.toml  README.txt
raw_pointer/: raw_pointer.rs
reqwesttest/: Cargo.toml
snowflatetest/: Cargo.toml
sound/: Cargo.toml  ReadMe.txt
tcp-client-server/: README.md  client.rs  client2.rs  server.rs  tcp-client.rs  tcp-echo-server.rs
the_question_mark/: the_qm.rs
tokio-test/: Cargo.toml  README.txt
transmute/: transmute.rs
twilio-rs-test/: Cargo.toml
twilio_default/: Cargo.toml
twills/: Cargo.toml
(+78 files in other folders)
